--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bulma": "^0.9.0",
     "classnames": "^2.2.6",
     "downshift": "^6.0.5",
+    "gsap": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
